@@ -79,4 +79,7 @@ InitNTLogging(FILE *, int);
 void
 NTReportError(const char *, const char *);
 
+char *
+ntp_strerror(int);
+
 #endif
